--- a/templates/dkfz-embl-template.ini
+++ b/templates/dkfz-embl-template.ini
@@ -1,6 +1,19 @@
 # TODO: add version, URLs, etc for Delly workflow so they aren't hard coded in the workflow for upload
 
 # GENERAL
+cleanup=false
+cleanupBams=true
+donor_id=[% donor_id %]
+project_code=[% project_code %]
+workflow_name=[% workflowName %]
+workflow_version=1.0.0
+vm_instance_type=
+vm_instance_cores=
+vm_instance_mem_gb=
+vm_location_code=[% vmLocationCode %]
+study-refname-override=[% studyRefnameOverride %]
+analysis-center-override=[% analysisCenterOverride %]
+
 tumourAliquotIds=f393bb07-270c-2c93-e040-11ac0d484533
 tumourAnalysisIds=ef26d046-e88a-4f21-a232-16ccb43637f2
 tumourBams=7723a85b59ebce340fe43fc1df504b35.bam
