--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -1,6 +1,6 @@
 input_bam_paths=
 
-gnos_input_file_urls=[% unaligne_bams %]
+gnos_input_file_urls=[% unaligned_bams %]
 
 gnos_input_metadata_urls=[% metadata_urls%]
 
