updating templates. BWA template now gets populated

--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -1,10 +1,10 @@
-input_bam_paths=
+input_bam_paths=[% input_bam_paths %]
 
-gnos_input_file_urls=[% unaligne_bams %]
+gnos_input_file_urls=[% gnos_input_file_urls %]
 
-gnos_input_metadata_urls=[% metadata_urls%]
+gnos_input_metadata_urls=[% gnos_input_metadata_urls %]
 
-gnos_output_file_url= [% output_file_url %]
+gnos_output_file_url=[% gnos_repo %]
 
 use_gtvalidation=true
 
