--- a/templates/dkfz-embl-template.ini
+++ b/templates/dkfz-embl-template.ini
@@ -5,20 +5,20 @@ cleanup=false
 cleanupBams=true
 donor_id=[% donor_id %]
 project_code=[% project_code %]
-workflow_name=[% workflowName %]
+workflow_name=[% workflow_name %]
 workflow_version=1.0.0
 vm_instance_type=
 vm_instance_cores=
 vm_instance_mem_gb=
-vm_location_code=[% vmLocationCode %]
-study-refname-override=[% studyRefnameOverride %]
-analysis-center-override=[% analysisCenterOverride %]
+vm_location_code=
+study-refname-override=
+analysis-center-override=
 
-tumourAliquotIds=[% tumourAliquotIds %]
-tumourAnalysisIds=[% tumourAnalysisId %]
-tumourBams=[% tumourBams %]
-controlAnalysisId=[% controlAnalysisId %]
-controlBam=[% controlBam %]
+tumourAliquotIds=[% tumour_aliquot_ids %]
+tumourAnalysisIds=[% tumour_analysis_ids %]
+tumourBams=[% tumour_bams %]
+controlAnalysisId=[% control_analysis_id %]
+controlBam=[% control_bam %]
 study-refname-override=CGTEST
 analysis-center-override=dkfz
 pemFile=/home/ubuntu/.ssh/20150212_boconnor_gnos_icgc_keyfile.pem
