--- a/templates/dkfz-embl-template.ini
+++ b/templates/dkfz-embl-template.ini
@@ -46,11 +46,11 @@ uploadS3Bucket=s3://bucket/path
 
 # DELLY-Specific
 # key=datastore:type=text:display=T:display_name=ID for the current run, will be used to create filenames
-EMBL.delly_runID=f393bb07-270c-2c93-e040-11ac0d484533
+EMBL.delly_runID=[% tumour_aliquot_ids %]
 # key=input_bam_path_tumor:type=text:display=T:display_name=The relative tumor BAM path, directory name only
-EMBL.input_bam_path_tumor=inputs/ef26d046-e88a-4f21-a232-16ccb43637f2
+EMBL.input_bam_path_tumor=inputs/[% tumour_analysis_ids %]
 # key=input_bam_path_germ:type=text:display=T:display_name=The relative germline BAM path, corresponding to the directory with the tumor BAM
-EMBL.input_bam_path_germ=inputs/1b9215ab-3634-4108-9db7-7e63139ef7e9
+EMBL.input_bam_path_germ=inputs/[% control_analysis_id %]
 # key=datastore:type=text:display=T:display_name=path to datastore directory within the Docker container (which is tied from the upper level when running the Docker container)
 EMBL.datastore=/datastore/
 #key=breakpoint:type=pulldown:display=T:display_name=Selecting true includes the breakpointing. Requires the reference genome fasta, defined in ref_genome_path:pulldown_items=true|true;false|false
