Changing dkfz-embl template based on what Brian says he is using

--- a/templates/dkfz-embl-template.ini
+++ b/templates/dkfz-embl-template.ini
@@ -1,50 +1,56 @@
-# TODO: add version, URLs, etc for Delly workflow so they aren't hard coded in the workflow for upload
 
-# GENERAL
+# GENERAL OPTIONS
 cleanup=false
 cleanupBams=true
 donor_id=[% donor_id %]
 project_code=[% project_code %]
 workflow_name=[% workflow_name %]
 workflow_version=1.0.0
-vm_instance_type=
-vm_instance_cores=
-vm_instance_mem_gb=
-vm_location_code=
-study-refname-override=
-analysis-center-override=
+vmInstanceType=r3.8xlarge
+vmLocationCode=12
+study-refname-override=icgc_pancancer_vcf
+analysis-center-override=ebi
 
+# WORKFLOW RUN OPTIONS
+# these are some options for the future
+# runEmbl = true # this is always the case for now
+# can optionally turn off the DKFZ workflow if you just want EMBL
+runDkfz = true
+
+# INPUTS
 tumourAliquotIds=[% tumour_aliquot_ids %]
 tumourAnalysisIds=[% tumour_analysis_ids %]
 tumourBams=[% tumour_bams %]
 controlAnalysisId=[% control_analysis_id %]
 controlBam=[% control_bam %]
-study-refname-override=CGTEST
-analysis-center-override=dkfz
-pemFile=/home/ubuntu/.ssh/20150212_boconnor_gnos_icgc_keyfile.pem
-gnosServer=https://gtrepo-ebi.annailabs.com
-uploadServer=https://gtrepo-ebi.annailabs.com
-uploadPemFile=/home/ubuntu/.ssh/20150212_boconnor_gnos_icgc_keyfile.pem
-vmInstanceType=tbd
-vmInstanceCores=tbd
-vmInstanceMemGb=tbd
-vmLocationCode=tbd
-# controls local file mode
-localFileMode=false
+
+# LOCAL FILE OPTIONS
 # Data directory for storing common workflow files
 common_data_dir=/datastore/DEWorkflowData
 
-# download options
-# this can be S3 or GNOS
-downloadSource=S3
+# DOWNLOAD OPTIONS
+# this can be S3 or GNOS or local
+downloadSource=GNOS
 # comma-delimited if multiple tumors
 tumourBamS3Urls=s3://bucket/path/7723a85b59ebce340fe43fc1df504b35.bam
 controlBamS3Url=s3://bucket/path/8f957ddae66343269cb9b854c02eee2f.bam
 # this can be S3 or GNOS
-uploadDestination=S3
-uploadS3Bucket=s3://bucket/path
+uploadDestination=GNOS
+uploadS3BucketPath=s3://bucket/path
+uploadLocalPath=./upload_archive/
+# s3 keys
+s3Key=kljsdflkjsdlkfj
+s3SecretKey=lksdfjlsdkjflksdjfkljsd
+# GNOS options
+pemFile=/home/ubuntu/.ssh/gnos.pem
+gnosServer=https://gtrepo-ebi.annailabs.com
+uploadServer=https://gtrepo-ebi.annailabs.com
+uploadPemFile=/home/ubuntu/.ssh/gnos.pem
+gnosTimeoutMin=20
+gnosRetries=3
 
-# DELLY-Specific
+# UPLOAD OPTIONS
+# DELLY-SPECIFIC OPTIONS
 # key=datastore:type=text:display=T:display_name=ID for the current run, will be used to create filenames
 EMBL.delly_runID=[% tumour_aliquot_ids %]
 # key=input_bam_path_tumor:type=text:display=T:display_name=The relative tumor BAM path, directory name only
@@ -85,7 +91,9 @@ EMBL.copy_results_bin=/usr/bin/delly_copy_results.sh
 EMBL.output_prefix=./
 EMBL.output_dir=delly_results
 
-# DKFZ-Specific
+# DKFZ-SPECIFIC OPTIONS
 DKFZ.dkfzDataBundleServer=https://gtrepo-dkfz.annailabs.com
 DKFZ.dkfzDataBundleUUID=32749c9f-d8aa-4ff5-b32c-296976aec706
 DKFZ.dkfzDataBundleFile=dkfz-workflow-dependencies_150318_0951.tar.gz
+DKFZ.dkfzDataBundleDownloadKey=/home/ubuntu/.ssh/gnos.pem
+
