--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: perl
 rvm:
  - "5.18"
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y make git libipc-system-simple-perl libgetopt-euclid-perl libjson-perl libwww-perl libdata-dumper-simple-perl libtemplate-perl
 script: perl -c generate_ini_files.pl
