--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ language: perl
 rvm:
  - "5.18"
 before_install:
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init --auto
   - cpanm --notest IPC::System::Simple
   - cpanm --notest Getopt::Euclid
   - cpanm --notest JSON
