--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rvm:
  - "5.18"
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-  - source ~/travis-perl-helpers/init --auto
+  - source ~/travis-perl-helpers/init
   - cpanm --notest IPC::System::Simple
   - cpanm --notest Getopt::Euclid
   - cpanm --notest JSON
@@ -18,6 +18,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y make git libipc-system-simple-perl libgetopt-euclid-perl libjson-perl libwww-perl libdata-dumper-simple-perl libtemplate-perl
 install:
+  - cpanm -n -q --skip-satisfied --installdeps .
 script: perl -c generate_ini_files.pl
 notifications:
   email: false
