--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ language: perl
 rvm:
  - "5.18"
 before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq make git libipc-system-simple-perl libgetopt-euclid-perl libjson-perl libwww-perl libdata-dumper-simple-perl libtemplate-perl
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
   - source ~/travis-perl-helpers/init
   - cpanm --notest IPC::System::Simple
@@ -15,8 +17,6 @@ before_install:
   - cpanm --notest LWP::UserAgent
   - cpanm --notest Data::Dumper
   - cpanm --notest Template
-  - sudo apt-get update -qq
-  - sudo apt-get install -y make git libipc-system-simple-perl libgetopt-euclid-perl libjson-perl libwww-perl libdata-dumper-simple-perl libtemplate-perl
 install:
   - cpanm -n -q --skip-satisfied --installdeps .
 script: perl -c generate_ini_files.pl
