--- a/templates/sanger-1.0.5.bsc.ini
+++ b/templates/sanger-1.0.5.bsc.ini
@@ -101,9 +101,9 @@ tabixSrvUri=
 pemFile=
 uploadPemFile=
 seqware-output-lines-number=
-gnosServer=[% gnos_url %]
+gnosServer=[% download_gnos_url %]
 ## comment out upload server to block vcfUpload
-uploadServer=[% gnos_url %]
+uploadServer=[% upload_gnos_url %]
 
 study-refname-override=
 analysis-center-override=
