changing bwa template to include submitter_sample_id for sample_id in ini

--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -72,4 +72,4 @@ study-refname-override=icgc_pancancer
 
 unmappedReadsJobMemM=8000
 
-sample_id=[% samples_id %]
+sample_id=[% submitter_samples_id %]
