--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -26,7 +26,7 @@ picardSortMem=12
 
 additionalPicardParams=
 
-input_reference=/mnt/home/seqware/provisioned-bundles/Workflow_Bundle_BWA_2.6.1_SeqWare_1.1.0-alpha.5/Workflow_Bundle_BWA/2.6.1/data/reference/bwa-0.6.2/genome.fa.gz
+input_reference=${workflow_bundle_dir}/Workflow_Bundle_${workflow-directory-name}/${version}/data/reference/bwa-0.6.2/genome.fa.gz
 
 maxInsertSize=
 
