Remove Maven variable which is not used outside Maven

--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -26,7 +26,7 @@ picardSortMem=12
 
 additionalPicardParams=
 
-input_reference=${workflow_bundle_dir}/Workflow_Bundle_${workflow-directory-name}/${version}/data/reference/bwa-0.6.2/genome.fa.gz
+input_reference=${workflow_bundle_dir}/Workflow_Bundle_BWA/2.6.4/data/reference/bwa-0.6.2/genome.fa.gz
 
 maxInsertSize=
 
