--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -26,8 +26,6 @@ picardSortMem=12
 
 additionalPicardParams=
 
-input_reference=${workflow_bundle_dir}/Workflow_Bundle_BWA/2.6.4/data/reference/bwa-0.6.2/genome.fa.gz
-
 maxInsertSize=
 
 bwaAlignMemG=15
@@ -71,6 +69,10 @@ gtdownloadWrapperType=file_based
 study-refname-override=icgc_pancancer
 
 unmappedReadsJobMemM=8000
+
+project-code = [% project_code %]
+
+donor-id = [% donor_id %]
 
 sample_id=[% submitter_sample_id %]
 
