--- a/templates/gnos_to_s3.ini
+++ b/templates/gnos_to_s3.ini
@@ -17,6 +17,10 @@ project_code=[% project_code %]
 # memory for upload to SFTP/S3
 duckJobMem=16000
 
+# Elasticsearch Credential Files
+elasticsearchKey=/home/ubuntu/.ssh/client.key
+elasticsearchCert=/home/ubuntu/.ssh/client.pem
+
 # S3 Upload
 S3UploadBucket=oicrbam
 S3UploadKey=slkdfjslkdj
