--- a/templates/dkfz-embl-template.ini
+++ b/templates/dkfz-embl-template.ini
@@ -54,7 +54,7 @@ gnosRetries=3
 # key=datastore:type=text:display=T:display_name=ID for the current run, will be used to create filenames
 EMBL.delly_runID=[% tumour_aliquot_ids %]
 # key=input_bam_path_tumor:type=text:display=T:display_name=The relative tumor BAM path, directory name only
-EMBL.input_bam_path_tumor=inputs/[% tumour_analysis_ids %]
+EMBL.input_bam_path_tumor=[% tumour_analysis_paths%]
 # key=input_bam_path_germ:type=text:display=T:display_name=The relative germline BAM path, corresponding to the directory with the tumor BAM
 EMBL.input_bam_path_germ=inputs/[% control_analysis_id %]
 # key=datastore:type=text:display=T:display_name=path to datastore directory within the Docker container (which is tied from the upper level when running the Docker container)
