--- a/templates/dkfz-embl-template-1.0.5.ini
+++ b/templates/dkfz-embl-template-1.0.5.ini
@@ -5,7 +5,7 @@ cleanupBams=true
 donor_id=[% donor_id %]
 project_code=[% project_code %]
 workflow_name=[% workflow_name %]
-workflow_version=1.0.5j
+workflow_version=1.0.5
 vmInstanceType=r3.8xlarge
 vmLocationCode=12
 study-refname-override=icgc_pancancer_vcf
