Changes for newest BWA
Added: useGNOS with default value of "true"
Changed: gnos_input_file_urls to input_file_urls; gnos_output_file_url to output_file_url

--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -1,10 +1,10 @@
 input_bam_paths=[% input_bam_paths %]
 
-gnos_input_file_urls=[% gnos_input_file_urls %]
+input_file_urls=[% gnos_input_file_urls %]
 
 gnos_input_metadata_urls=[% gnos_input_metadata_urls %]
 
-gnos_output_file_url=[% gnos_repo %]
+output_file_url=[% gnos_repo %]
 
 use_gtvalidation=true
 
@@ -77,3 +77,5 @@ donor-id = [% donor_id %]
 sample_id=[% submitter_sample_id %]
 
 gnos_timeout_min=60
+
+useGNOS=true
