Update path to pem

--- a/templates/bwa_template.ini
+++ b/templates/bwa_template.ini
@@ -44,7 +44,7 @@ bwa_sampe_params=
 
 readGroup=
 
-gnos_key=/mnt/home/seqware/provisioned-bundles/Workflow_Bundle_BWA_2.6.1_SeqWare_1.1.0-alpha.5/Workflow_Bundle_BWA/2.6.1/scripts/gnostest.pem
+gnos_key=/home/ubuntu/.gnos/gnos.pem
 
 uploadScriptJobMem=12
 
